# face-smart

./: adminenregistration.py  db.sql  demo.py  employe.py  gestion.py  gi.py  interface.py  jssp.py  login.py  main.py  modifier.py  pyproject.toml  registration.py  req.txt  stylesheet.css  ty.py  webcam.py  welcome.py
