[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "face-recognition"
version = "0.1.0"
description = "Une bibliothèque Python pour le traitement d'images avec des fonctionnalités de détection de visages et de reconnaissance faciale"
authors = ["mariam<laachermariam@gmail.com>"]
